2003-10-27  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3462523>: Safari Sometimes Destroys Applets When Going "Back"

        Reviewed by darin.

        * History.subproj/WebHistoryItem.m:
        (+[WebHistoryItem _destroyAllPluginsInPendingPageCaches]): Don't destroy plug-ins that are currently being viewed.

2003-10-27  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3463144>: assertion failure when viewing jpeg with SoundPix installed

        Reviewed by john.

        * WebView.subproj/WebDataSource.m:
        (+[WebDataSource _repTypesAllowImageTypeOmission:]): don't allow image types to override types that are already registered as we do in [WebFrameView _viewTypesAllowImageTypeOmission:]

2003-10-24  Chris Blumenberg  <cblu@apple.com>

	Fixed:
	<rdar://problem/3462977>: ER: Nice if images dragged from web pages didn't redownload
	<rdar://problem/3031582>: Dragging an image to the desktop doesn't leave the file where I dropped it
	<rdar://problem/3061371>: "CFURLGetFSRef failed" log when dragging image to Finder

        Reviewed by john.

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView namesOfPromisedFilesDroppedAtDestination:]): attempt to fetch the image data from the cache, if that works, write out the file

2003-10-26  Darin Adler  <darin@apple.com>

        * WebKitPrefix.h: Add a definition of NULL here so we get the stricter type checking
        even on pre-Merlot systems.

=== Safari-111 ===

2003-10-24  Richard Williamson   <rjw@apple.com>

	Fixed 3425358.  Don't try to create page cache for pages that
	have a nil view().

        Reviewed by Hyatt.

        * WebView.subproj/WebFrame.m:
        (-[WebFrame _createPageCacheForItem:]):
        (-[WebFrame _setState:]):

2003-10-24  Chris Blumenberg  <cblu@apple.com>
	
	Fixed: <rdar://problem/3424039>: standalone plug-in content occasionaly redirects to blank page

        Reviewed by john.

        * Plugins.subproj/WebBaseNetscapePluginView.m: